# lagranged

./: .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md
.github/workflows/: ci.yml
Lagrangian Particle Footprints/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  README.md  mkdocs.yml  noxfile.py  pyproject.toml
Lagrangian Particle Footprints/docs/: index.md  quickstart.md
Lagrangian Particle Footprints/examples/: 02_stability_sweep.ipynb  03_tower_csv_ingest.ipynb  05_measured_turbulence_reynolds.ipynb
Lagrangian Particle Footprints/examples/scripts/: run_single.py
Lagrangian Particle Footprints/src/lagranged/: _rng.py  cli.py  config.py  contours.py  geo.py  gridding.py  io.py  profiles.py  results.py
Lagrangian Particle Footprints/tests/: conftest.py  test_batch_cli.py  test_gridding.py  test_profiles.py  test_smoke.py  test_stochastic.py  test_stochastic_wellmixed.py
Lagrangian Particle Footprints/tests/data/golden/: footprint_neutral.npy  footprint_stable.npy  footprint_unstable.npy
docs/: IMPLEMENTATION_PROMPTS.md  api.md  limitations.md  theory.md
docs/javascripts/: mathjax.js
examples/: 01_synthetic_neutral.ipynb  04_batch_geotiff_export.ipynb  README.md
scripts/: regenerate_goldens.py
src/lagranged/: __init__.py  constants.py  inputs.py  model.py  particles.py  plotting.py  stochastic.py  touchdown.py  turbulence.py  validation.py
tests/: test_cross_model.py  test_geo.py  test_model_integration.py  test_particles.py  test_physics_behavior.py  test_regression.py  test_touchdown.py  test_turbulence.py
tests/data/: .gitkeep  README.md  eddypro_sample.csv
