[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "lagranged"
version = "0.2.0"
description = "Eddy-covariance flux footprints via a backward Lagrangian stochastic particle model."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Paul Inkenbrandt", email = "paulinkenbrandt@gmail.com" }]
keywords = [
    "eddy covariance",
    "flux footprint",
    "lagrangian stochastic",
    "micrometeorology",
    "boundary layer",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]

# Core runtime: kept minimal so `pip install lagranged` works in a plain
# scientific environment. Heavier geospatial/accel stacks are gated as extras.
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "xarray>=2023.1",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
geo = [
    "rioxarray>=0.15",
    "rasterio>=1.3",
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.5",
]
fast = ["numba>=0.58"]
cli = ["typer>=0.9"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "hypothesis>=6.90",
    "nbmake>=1.4",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.8",
]
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.24"]
all = ["lagranged[geo,fast,cli,dev,docs]"]

[project.urls]
Homepage = "https://github.com/paulinkenbrandt/lagranged"
Repository = "https://github.com/paulinkenbrandt/lagranged"
Issues = "https://github.com/paulinkenbrandt/lagranged/issues"

[project.scripts]
lagranged = "lagranged.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lagranged"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "NPY"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
ignore_missing_imports = true
files = ["src/lagranged"]
